--- a/D.E/Q1/main.tex
+++ b/D.E/Q1/main.tex
@@ -67,31 +67,33 @@ y_m^{\prime}&=f\brak{x, y_1, y_2, \dots, y_m}
 \end{align}
 Generalizing the system according to Euler's form\\
 \begin{align}
-    \myvec{y_m\brak{x+h} \\ y_{m-1}\brak{x+h} \\ \vdots \\ y_1\brak{x+h}} = \myvec{y_m\brak{x} \\ y_{m-1}\brak{x} \\ \vdots \\ y_1\brak{x}} + h\myvec{f\brak{x, y_1, y_2, \dots, y_m} \\ y_m\brak{x} \\ \vdots \\ y_2\brak{x}}
+  \myvec{y_1\brak{x+h} \\ \vdots \\ y_{m-1}\brak{x+h} \\ y_m\brak{x+h}} &=\myvec{y_1\brak{x} \\ \vdots \\ y_{m-1}\brak{x} \\ y_m\brak{x}} + h\myvec{y_2\brak{x} \\ \vdots \\ y_m\brak{x} \\f\brak{x, y_1, y_2, \dots, y_m} }\\
+  \vec{y}\brak{x+h} &= \vec{y}\brak{x} + h\myvec{0 & 1 & 0 & 0 & \dots & 0 & 0\\ 0 & 0 & 1 & 0 & \dots & 0 & 0\\0 & 0 & 0 & 1 & \dots & 0 & 0\\\vdots & \vdots & \vdots & \vdots& \ddots & \vdots & \vdots\\
+  0 & 0 & 0 & 0 & \dots & 0 & 1\\0 & 0 & 0 & 0 & \dots & 0 &\frac{f\brak{x, y_1, y_2, \dots, y_m}}{y_m\brak{x}}}\vec{y}\brak{x}\\
+  \vec{y}\brak{x+h} &= \myvec{1 & h & 0 & 0 & \dots & 0 & 0\\ 0 & 1 & h & 0 & \dots & 0 & 0\\0 & 0 & 1 & h & \dots & 0 & 0\\\vdots & \vdots & \vdots & \vdots& \ddots & \vdots & \vdots\\
+  0 & 0 & 0 & 0 & \dots & 1 & h\\0 & 0 & 0 & 0 & \dots & 0 & 1+\frac{f\brak{x, y_1, y_2, \dots, y_m}}{y_m\brak{x}}}\vec{y}\brak{x}
 \end{align}
 
 Discretizing the steps we get,
 \begin{align}
-    \myvec{\brak{y_{m}}_{n+1} \\ \brak{y_{m-1}}_{n+1} \\ \vdots \\ \brak{y_2}_{n+1} \\ \brak{y_1}_{n+1}}&=\myvec{\brak{y_{m}}_n \\ \brak{y_{m-1}}_n \\ \vdots \\ \brak{y_2}_n \\ \brak{y_1}_n}+h\myvec{f\brak{x, y_1, y_2, \dots, y_m} \\ \brak{y_{m}}_n \\ \vdots \\ \brak{y_3}_n \\ \brak{y_2}_n}\\
-    x_{n+1}&=x_n+h
+  \vec{y}_{n+1}&=\myvec{1 & h & 0 & 0 & \dots & 0 & 0\\ 0 & 1 & h & 0 & \dots & 0 & 0\\0 & 0 & 1 & h & \dots & 0 & 0\\\vdots & \vdots & \vdots & \vdots& \ddots & \vdots & \vdots\\
+  0 & 0 & 0 & 0 & \dots & 1 & h\\0 & 0 & 0 & 0 & \dots & 0 &1+\frac{f\brak{x, y_1, y_2, \dots, y_m}}{\brak{y_m}_n}}\vec{y}_{n}\\
+    x_{n+1}&=x_n+h  
 \end{align}
 Smaller values of step size $h$ will give more precise plots. We obtain points to plot by iterating repeatedly. 
-
 Given differential equation can be written as,
 \begin{align}
     y^{\prime \prime \prime}\brak{x} = \pm \sqrt{-\brak{\brak{y^{\prime \prime}\brak{x}}^3 + \brak{y^{\prime}\brak{x}}^4 + \brak{y\brak{x}}^5 }}
 \end{align}
-Here, there are two possible functions so we need to take two cases. On substituting given initial conditions we see that we only get valid values for $y^{\prime \prime \prime}\brak{x} = + \sqrt{-\brak{\brak{y^{\prime \prime}}^3 + \brak{y^{\prime}}^4 + \brak{y}^5 }}$. In the other case we observe that we get imaginary values.
+Here, order $m$ is 3, there are two possible functions so we need to take two cases. On substituting given initial conditions we see that we only get valid values for $y^{\prime \prime \prime}\brak{x} = + \sqrt{-\brak{\brak{y^{\prime \prime}}^3 + \brak{y^{\prime}}^4 + \brak{y}^5 }}$. In the other case we observe that we get imaginary values.
 \begin{align}
-    \myvec{\brak{y_{3}}_{n+1} \\ \brak{y_{2}}_{n+1} \\ \brak{y_1}_{n+1}}=\myvec{\brak{y_{3}}_n \\ \brak{y_2}_n \\ \brak{y_1}_n}+h\myvec{\sqrt{-\brak{\brak{y^{\prime \prime}}^3 + \brak{y^{\prime}}^4 + \brak{y}^5 }}\\ \brak{y_3}_n \\ \brak{y_2}_n}
+  \vec{y}_{n+1}=\myvec{1 & h & 0 \\ 0 & 1 & h \\ 0 & 0 & 1+\frac{\sqrt{-\brak{\brak{y_3}_n^3 + \brak{y_2}_n^4 + \brak{y_1}_n^5}} }{\brak{y_3}_n}}\vec{y}_{n}
 \end{align}
-Below is the plot for given curve  based on initial conditions, obtained by iterating through the above equation.
+Note, here the vector $\vec{y}$ is not to be confused with $y_i$ which represents a function, namely the ${i+1}^{th}$ derivative of $y\brak{x}$ Below is the plot for given curve  based on initial conditions, obtained by iterating through the above equation.
 \begin{figure}[h!]
    \centering
    \includegraphics[width=1\columnwidth]{figs/fig1.png}
    \caption{Computational solution of $\brak{y^{\prime \prime \prime}}^2 + \brak{y^{\prime \prime}}^3 + \brak{y^{\prime}}^4 + \brak{y}^5 = 0$}
    \label{stemplot}
 \end{figure}
-
 \end{document}
-
