--- a/D.E/Q4/main.tex
+++ b/D.E/Q4/main.tex
@@ -72,7 +72,7 @@ Equation $\brak{3}$ simplifies to be,
   \kappa_i=-\vec{m}^{\top}\myvec{0\\-\frac{1}{2}}\pm \vec{m}^{\top}\myvec{0\\-\frac{1}{2}}
 \end{align}
 $\vec{x}=0$ is a common solution to both parts of the line equation. When $x\ge0$, $\myvec{1\\1}$ is a solution, when $x<0$, $\myvec{-1\\1}$ is also a solution.\newline
-The curve $y=x^2$ and the line $y=\abs{x}$ meet at three points $\myvec{1\\1}, \myvec{-1\\1}, \myvec{0\\0}$.
+The curve $y=x^2$ and the line $y=\abs{x}$ meet at three points $\myvec{1\\1}, \myvec{-1\\1}, \myvec{0\\0}$.\newline
 Equation for area enclosed is given by,
 \begin{align}
   &\int_{-1}^1\brak{\abs{x}-x^2}dx\\
