--- a/D.E/beamer/Q1/main.tex
+++ b/D.E/beamer/Q1/main.tex
@@ -127,7 +127,6 @@ Generalizing the system according to Euler's form\\
 \end{align}
       }
 		\end{frame}
-		\subsection{Points of Intersection}
 		\begin{frame}
 			\frametitle{Computational Solution}
       {\small
@@ -144,7 +143,6 @@ Discretizing the steps we get,
 \end{align}
       }
 		\end{frame}
-		\subsection{Area}
 		\begin{frame}[fragile]
 			\frametitle{Computational Solution}
 Where,
@@ -154,7 +152,7 @@ Where,
 \end{align}
 Smaller values of step size $h$ will give more precise plots. We obtain points to plot by iterating repeatedly. 
 		\end{frame}
-		\subsection{Codes}
+		\subsection{Difference Equation}
 		\begin{frame}[fragile]
 			\frametitle{Computational Solution}
 Given differential equation can be written as,
