fixed some text

--- a/D.E/Q5/main.tex
+++ b/D.E/Q5/main.tex
@@ -74,6 +74,7 @@ Applying Laplace Transform to given differential Equation,
  \begin{align}
    y = \frac{\brak{e^{x} + e^{-x}}}{2}
  \end{align}\textbf{Computational Solution:}\newline
+ Solving given differential equation using bilinear transform.
 Taking Laplace transform to both sides of the Differential Equation,
 
 \begin{align}
