--- a/D.E/Q7/main.tex
+++ b/D.E/Q7/main.tex
@@ -276,6 +276,7 @@ Introducing a shift to the matrix can drastically improve its convergence rate. 
     A^{\prime}_k &= A-\sigma I\\
     A^{\prime}_{k+1} &= (Q_k^{\prime}R_k^{\prime})+\sigma I
 \end{align}
+Iteratively repeating this process causes the matrix to converge to upper triangular.
 Where $\sigma$ is given by element $H_{n-1, n-1} $ of the matrix. \newline
 Special Case: Jordan Blocks \newline
 
@@ -304,7 +305,6 @@ Running the eigenvalue code for our companion matrix we get,
 Eigenvalues:
 (11.999964 + 0.000000i) 
 (13.000036 + 0.000000i)\end{verbatim}
-\textbf{Alternate Computational Solution: }\newline
 \begin{figure}[h!]
    \centering
    \includegraphics[width=1\columnwidth]{figs/fig.png}
