--- a/D.E/Q9/main.tex
+++ b/D.E/Q9/main.tex
@@ -93,7 +93,7 @@ where $p$ is the probability of getting heads
   M_{X_1}\brak{z}&=\sum_{k=-\infty}^{\infty}p_{X_1}\brak{k}z^{-n} = p + \brak{1-p}z^{-1}\\
   M_{X_2}\brak{z}&=\sum_{k=-\infty}^{\infty}p_{X_2}\brak{k}z^{-n} = p + \brak{1-p}z^{-1}\\
   &\vdots\\
-  M_{X_m}\brak{z}&=\sum_{k=-\infty}^{\infty}p_{X_m}\brak{k}z^{-n} = p + \brak{1-p}z^{-1}\\   M_Y\brak{z} &= \brak{p + \brak{1-p}z^{-1}}^{m}
+  M_{X_m}\brak{z}&=\sum_{k=-\infty}^{\infty}p_{X_m}\brak{k}z^{-n} = p + \brak{1-p}z^{-1}\\   M_X\brak{z} &= \brak{p + \brak{1-p}z^{-1}}^{m}
 \end{align}
 This can be simplified to,
 \begin{align}
