small small changes made

--- a/D.E/Q9/main.tex
+++ b/D.E/Q9/main.tex
@@ -105,7 +105,7 @@ Taking $z-$inverse on both sides we get,
 \end{align}
 Here, since we require probability of $3$ tails out of $3$ tosses, set $k=3, m=3$ in the above equation.\newline
 Required probability $=\frac{1}{8}$\newline
-If we redefine the problem a little bit, it can be solved using Cummulative Frequency Distribution. We can say $P\brak{\text{3 tails}} = 1 - P\brak{\text{Atleast one head}}$ since out of three coin tosses there can be at max $3$ tails.\newline
+If we redefine the problem a little bit, it can be solved using Cummulative Frequency Distribution. We can say $\pr{\text{3 tails}} = 1 - \pr{\text{Atleast one head}}$ since out of three coin tosses there can be at max $3$ tails.\newline
 We can say that 
 \begin{align}
   \pr{\text{m-k tails}} &= \pr{\text{k heads}}\\
