--- a/D.E/Q9/main.tex
+++ b/D.E/Q9/main.tex
@@ -114,7 +114,7 @@ We can say that
 For our problem $m=3, k=1$
 Cummulative Distribution Function is given by,
 \begin{align}
-    F_X \brak{n} = \sum _{k=-\infty}^{n} \comb{3}{k} \brak{\frac{1}{2}}^3 
+    F_X \brak{n} = \sum _{k=-\infty}^{n} \comb{3}{k} \brak{\frac{1}{2}}^3\\ 
     F_{X}\brak{n} = \begin{cases}
         0 & \quad n < 0\\
         \comb{3}{0}\brak{\frac{1}{2}}^3 = \frac{1}{8} & \quad 0 \leq n < 1\\
