--- a/D.E/Q9/main.tex
+++ b/D.E/Q9/main.tex
@@ -105,7 +105,7 @@ Taking $z-$inverse on both sides we get,
 \end{align}
 Taking $m=3, p = \frac{1}{2}$ we get,
 \begin{align}
-  p_X\brak{k} = \comb{3}{k}p^k\brak{1-p}^{3-k}
+  p_X\brak{n} = \comb{3}{n}\brak{\frac{1}{2}}^3
 \end{align}
 Here, since we require probability of $3$ tails out of $3$ tosses, set $k=3$ in the above equation.\newline
 Required probability $=\frac{1}{8}$\newline
