--- a/D.E/Q9/main.tex
+++ b/D.E/Q9/main.tex
@@ -146,7 +146,7 @@ Generating random numbers with uniform probability was done using OpenSSL's rand
   \caption{CDF Plot}
   \label{label}
 \end{figure}
-
+\pagebreak
 \begin{figure}[h!]
   \centering
   \includegraphics[width=0.7\columnwidth]{figs/pmf_1.png}
@@ -154,7 +154,7 @@ Generating random numbers with uniform probability was done using OpenSSL's rand
   \label{label}
 \end{figure}
 
-We notice something interesting about PMF plots for different values of $m$. We see that it appears to converge Gaussian Distribution curve. One more interesting fact is that area under the Gaussian Distribution Curve is $1$. This further supports the fact that PMF converges to Gaussian Distribution Curve, as sum of all the probabilites $\brak{\sum P_X\brak{n} = 1}$ is $1$.  As $m \rightarrow \infty$ the PMF plot onverges to the Gaussian Distribution curve. We can visually verify this, \newline
+We notice something interesting about PMF plots for different values of $m$. We see that it appears to converge Gaussian Distribution curve. One more interesting fact is that area under the Gaussian Distribution Curve is $1$. This further supports the fact that PMF converges to Gaussian Distribution Curve, as sum of all the probabilites $\brak{\sum p_X\brak{n} = 1}$ is $1$.  As $m \rightarrow \infty$ the PMF plot onverges to the Gaussian Distribution curve. We can visually verify this, \newline
 
 Below are the PMF graphs for $m = 10, 25, 500, 100$ respectively
 \begin{figure*}[h!]
