--- a/Hardware/Project/Calculator/main.tex
+++ b/Hardware/Project/Calculator/main.tex
@@ -312,12 +312,25 @@ to obtain tan inverse we need to solve a seperate differential equation,
 \begin{align*}
     \frac{dy}{dx} = \frac{1}{1+x^2}
 \end{align*}
+\begin{figure}
+  \begin{center}
+    \includegraphics[width=0.95\textwidth]{figs/trig.png}
+  \end{center}
+  \caption{Trigonometric and Inverse Trigonometric Functions}\label{fig:Trigonometric and Inverse Trigonometric Functions}
+\end{figure}
+
 \subsubsection*{Logarithmic Function}
 
 For the logarithmic function, we solve the differential equation whose solution is \( y(t) = \ln(t) \):
 \[
 \frac{dy}{dx} = \frac{1}{x}
 \]
+\begin{figure}[h!]
+  \begin{center}
+    \includegraphics[width=0.7\textwidth]{figs/ln.png}
+  \end{center}
+  \caption{Logarithm (Base 10)}\label{fig:Log base 10}
+\end{figure}
 
 \subsubsection*{Power (Exponent) Function}
 
@@ -334,7 +347,27 @@ For the power function, we solve the differential equation whose solution is $y 
 %     \caption{BODMAS}
 % \end{figure}
 
-
+\begin{figure}
+  \begin{center}
+    \includegraphics[width=0.8\textwidth]{figs/pow.png}
+  \end{center}
+  \caption{Power}
+  \label{fig:Power}
+\end{figure}
+\begin{figure}
+  \begin{center}
+    \includegraphics[width=0.8\textwidth]{figs/pow1.png}
+  \end{center}
+  \caption{Exponent}
+  \label{fig:Exponent}
+\end{figure}
+\begin{figure}
+  \begin{center}
+    \includegraphics[width=0.8\textwidth]{figs/bod.png}
+  \end{center}
+  \caption{Bodmas}
+  \label{fig:Bodmas}
+\end{figure}
 \section*{Conclusion}
 This project has demonstrated my attempt to implementation of a fully functional calculator using a button matrix and AtMega328p microcontroller (arduino uno) implemented using avr-gcc and differential equations. 
 
